--- a/AdvGIS/ex7/ex7CSSairbnb.html
+++ b/AdvGIS/ex7/ex7CSSairbnb.html
@@ -105,7 +105,7 @@
       <option value="all">All boroughs</option>
       <option value="Bronx">Bronx</option>
       <option value="Brooklyn">Brooklyn</option>
-      <option value="Manhattam">Manhattam</option>
+      <option value="Manhattan">Manhattan</option>
       <option value="Queens">Queens</option>
       <option value="Staten Island">Staten Island</option>
       <option value="">other</option>
